First fulling functional revisiongit add .!
